[package]
name = "kitsune-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
blowocking = { workspace = true, features = ["io"] }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_full_text_search = { workspace = true }
diesel_migrations = "2.2.0"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
iso8601-timestamp = { workspace = true, features = ["diesel-pg"] }
kitsune-config = { workspace = true }
kitsune-error = { workspace = true }
kitsune-language = { workspace = true }
kitsune-type = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
rustls = { version = "0.23.15", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
] }
rustls-native-certs = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
sonic-rs = { workspace = true }
speedy-uuid = { workspace = true, features = ["diesel"] }
tokio = { workspace = true, features = ["rt"] }
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.13.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
trials = { workspace = true }
typed-builder = "0.20.0"

[dev-dependencies]
kitsune-test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
