[package]
name = "kitsune-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
blowocking.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_full_text_search.workspace = true
diesel_migrations = "2.2.0"
futures-util.workspace = true
iso8601-timestamp.workspace = true
kitsune-config.workspace = true
kitsune-error.workspace = true
kitsune-language.workspace = true
kitsune-type.workspace = true
num-derive = "0.4.2"
num-traits = "0.2.19"
rustls = { version = "0.23.19", default-features = false, features = [
    "logging",
    "ring",
    "std",
    "tls12",
] }
rustls-native-certs = "0.8.1"
serde.workspace = true
sonic-rs.workspace = true
speedy-uuid.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.13.0"
tracing.workspace = true
tracing-log = "0.2.0"
trials.workspace = true
typed-builder.workspace = true

[dev-dependencies]
kitsune-test.workspace = true
tokio.workspace = true

[lints]
workspace = true
