[package]
name = "kitsune-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
bitflags.workspace = true
blowocking.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel-derive-enum.workspace = true
diesel_full_text_search.workspace = true
diesel_migrations.workspace = true
futures-util.workspace = true
iso8601-timestamp.workspace = true
kitsune-config.workspace = true
kitsune-derive.workspace = true
kitsune-error.workspace = true
kitsune-language.workspace = true
kitsune-type.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
sonic-rs.workspace = true
speedy-uuid.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
tracing.workspace = true
trials.workspace = true
typed-builder.workspace = true

[dev-dependencies]
kitsune-test.workspace = true
tokio.workspace = true

[lints]
workspace = true
