[package]
name = "kitsune-email"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
kitsune-db.workspace = true
kitsune-derive.workspace = true
kitsune-error.workspace = true
kitsune-url.workspace = true
lettre = { version = "0.11.10", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
] }
mrml = { version = "4.0.1", default-features = false, features = [
    "parse",
    "render",
] }
sailfish.workspace = true
speedy-uuid.workspace = true
triomphe.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
