[package]
name = "kitsune-email"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
kitsune-db.workspace = true
kitsune-derive.workspace = true
kitsune-error.workspace = true
kitsune-url.workspace = true
lettre.workspace = true
mrml.workspace = true
sailfish.workspace = true
speedy-uuid.workspace = true
triomphe.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
