[package]
name = "kitsune-embed"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true }
http = "1.1.0"
iso8601-timestamp = { workspace = true }
kitsune-db = { workspace = true }
kitsune-derive = { workspace = true }
kitsune-error = { workspace = true }
kitsune-http-client = { workspace = true }
lantern-client-sdk = { package = "client-sdk", git = "https://github.com/Lantern-chat/client-sdk-rs.git", rev = "bda44f7464b4060cc553fb0e6c2a3917ab5d2f98", default-features = false }
scraper = { version = "0.20.0", default-features = false }
smol_str = "0.3.1"

[lints]
workspace = true
