[package]
name = "kitsune-embed"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
http.workspace = true
iso8601-timestamp.workspace = true
kitsune-db.workspace = true
kitsune-derive.workspace = true
kitsune-error.workspace = true
kitsune-http-client.workspace = true
lantern-client-sdk.workspace = true
schaber.workspace = true
smol_str.workspace = true

[lints]
workspace = true
