[package]
name = "kitsune-error"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum-core = "0.4.5"
eyre = "0.6.12"
garde = { workspace = true }
http = "1.1.0"
sonic-rs = { workspace = true }
sync_wrapper = "1.0.1"
tracing = "0.1.40"

[lints]
workspace = true
