[package]
name = "kitsune-error"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum-core = "0.4.5"
eyre.workspace = true
garde.workspace = true
http.workspace = true
sonic-rs.workspace = true
sync_wrapper = "1.0.2"
tracing.workspace = true

[lints]
workspace = true
