[package]
name = "kitsune-error"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum-core.workspace = true
eyre.workspace = true
garde.workspace = true
http.workspace = true
sonic-rs.workspace = true
sync_wrapper.workspace = true
tracing.workspace = true

[lints]
workspace = true
