[package]
name = "kitsune-federation-filter"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
globset = "0.4.14"
kitsune-config = { path = "../kitsune-config" }
kitsune-derive = { version = "0.0.1-pre.6", path = "../kitsune-derive" }
kitsune-error = { path = "../kitsune-error" }
kitsune-type = { path = "../kitsune-type" }
url = "2.5.0"

[lints]
workspace = true
