[package]
name = "kitsune-federation-filter"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
globset = "0.4.14"
kitsune-config = { workspace = true }
kitsune-derive = { workspace = true }
kitsune-error = { workspace = true }
kitsune-type = { workspace = true }
url = "2.5.2"

[lints]
workspace = true
