[package]
name = "kitsune-federation-filter"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
globset.workspace = true
kitsune-config.workspace = true
kitsune-derive.workspace = true
kitsune-error.workspace = true
kitsune-type.workspace = true
url.workspace = true

[lints]
workspace = true
